[package]
name = "Blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version ="0.4", features = ["serde"]}
rust-crypto = "^0.2"
serde = {version = "1.0.133",features = ["derive"]}
serde_derive = "1.0.133"
serde_json = "1.0.59"
